--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/bar": "^0.99.0",
+    "@nivo/core": "^0.99.0",
     "@tailwindcss/vite": "^4.1.12",
     "nepali-date-converter": "^3.4.0",
     "react": "^19.1.1",
